# chriscarl.tools.downloaders

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml
src/chriscarl/tools/downloaders/: basic.py
src/chriscarl/tools/shed/downloaders/: basic.py  canvas.py
tests/chriscarl/tools/downloaders/: test_basic.py
tests/chriscarl/tools/shed/downloaders/: test_basic.py  test_canvas.py
