[project]
name = "chriscarl.tools.downloaders"
version = "0.0.0"
description = ""
authors = [{name = "Chris Carl", email = "chrisbcarl@outlook.com"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.12,<3.14"


[tool.poetry]
package-mode = true
packages = [
    # https://python-poetry.org/docs/pyproject/#packages
    {include = "chriscarl", from = "src"}
]
include = [
    { path = "tests", format = "sdist" },
    # it seems to include all files that are in the packages include section without the need to specify
]
repository = "https://github.com/chrisbcarl/chriscarl.tools.downloaders"


[tool.poetry.urls]
changelog = "https://github.com/chrisbcarl/chriscarl.tools.downloaders/blob/main/CHANGELOG.md"
homepage = "https://example.com"
documentation = "https://readthedocs.org"
"bug tracker" = "https://github.com/me/spam/issues"


[tool.poetry.scripts]
dl-basic = 'chriscarl.tools.downloaders.basic:main'


[tool.poetry.dependencies]
chriscarl = {develop = true, path="../chriscarl.python"}  # version = ">0.0.0"


[tool.poetry.group.test.dependencies]
parameterized = "^0.9.0"
pytest = "^8.3.3"
tox = "^4.23.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
types-six = "^1.16.21.20241105"
pytest-cov = "^6.0.0"
gitpython = "^3.1.43"
mypy = "^1.19.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
